--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Calm down. Nothing to see here.</p>
 </body>
 </html>
